Implemented Angular-localization plugin. Swapped out simple translations on piechart component. Need to cover a few pages with various complexities.

--- a/src/app/pages/dashboard/dashboardPieChart/dashboardPieChart.html
+++ b/src/app/pages/dashboard/dashboardPieChart/dashboardPieChart.html
@@ -4,7 +4,7 @@
       <div class="pie-chart-item">
         <div class="chart" rel="{{ ::chart.color }}" data-percent="60"> <span class="percent"></span> </div>
         <div class="description">
-          <div>{{ ::chart.description }}</div>
+          <div>{{ 'dashboard.piechart.charts.' + chart.description | translate }}</div>
           <div class="description-stats">{{ ::chart.stats }}</div>
         </div>
         <i class="chart-icon i-{{ ::chart.icon }}"></i>
