--- a/src/app/theme/components/msgCenter/msgCenter.html
+++ b/src/app/theme/components/msgCenter/msgCenter.html
@@ -10,20 +10,22 @@
       <i class="dropdown-arr"></i>
 
       <div class="header clearfix">
-        <strong>Notifications</strong>
-        <a href>Mark All as Read</a>
-        <a href>Settings</a>
+        <strong>{{ 'theme.notifications.notifications' | translate }}</strong>
+        <a href>{{ 'theme.notifications.mark_all_as_read'  | translate }}</a>
+        <a href>{{ 'theme.notifications.settings' | translate }}</a>
       </div>
       <div class="msg-list">
         <a href class="clearfix" ng-repeat="msg in notifications">
-          <div class="img-area"><img ng-class="{'photo-msg-item' : !msg.image}" ng-src="{{::( msg.image ||  (users[msg.userId].name | profilePicture) )}}"></div>
+          <div class="img-area">
+              <img ng-class="{'photo-msg-item' : !msg.image}" ng-src="{{::( msg.image ||  (users[msg.userId].name | profilePicture) )}}">
+          </div>
           <div class="msg-area">
             <div ng-bind-html="getMessage(msg)"></div>
-            <span>{{ msg.time }}</span>
+            <span>{{ 'theme.n_hours_ago' | translate: '{ time: msg.time }' }}</span>
           </div>
         </a>
       </div>
-      <a href>See all notifications</a>
+      <a href>{{ 'theme.notifications.see_all_notifications' | translate }}</a>
     </div>
   </li>
   <li uib-dropdown>
@@ -34,9 +36,9 @@
     <div uib-dropdown-menu class="top-dropdown-menu">
       <i class="dropdown-arr"></i>
       <div class="header clearfix">
-        <strong>Messages</strong>
-        <a href>Mark All as Read</a>
-        <a href>Settings</a>
+        <strong>{{ 'theme.messages.messages' | translate }}</strong>
+        <a href>{{ 'theme.messages.mark_all_as_read' | translate }}</a>
+        <a href>{{ 'theme.messages.settings' | translate }}</a>
       </div>
       <div class="msg-list">
         <a href class="clearfix" ng-repeat="msg in messages">
@@ -47,7 +49,7 @@
           </div>
         </a>
       </div>
-      <a href>See all messages</a>
+      <a href>{{ 'theme.messages.see_all_messages' | translate }}</a>
     </div>
   </li>
 </ul>
